--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@ bomSpringCloud=Hoxton.SR6
 bomLog4j=2.13.3
 bomAwsJavaSdk=1.11.822
 bomAwsXRaySdk=2.6.1
-
 versionAwsLambdaCore=1.2.1
 versionAwsLambdaEvents=3.1.0
 versionInformedRacingCommon=1.0-SNAPSHOT
 versionJUnitJupiter=5.6.2
 versionLombok=1.18.12
+thisReleaseVersion=1.0-SNAPSHOT
