--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,6 @@ versionAwsLambdaEvents=3.1.0
 versionInformedRacingCommon=1.0-SNAPSHOT
 versionJUnitJupiter=5.6.2
 versionLombok=1.18.12
+pluginSpringBoot=2.3.2.RELEASE
+pluginShadow=6.0.0
 thisReleaseVersion=1.0-SNAPSHOT
