--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 bomSpringCloud=Hoxton.SR6
-bomLog4j=2.13.3
 bomAwsJavaSdk=1.11.822
 bomAwsXRaySdk=2.6.1
 versionAwsLambdaCore=1.2.1
 versionAwsLambdaEvents=3.1.0
+versionAwsLambdaLog4j=1.2.0
 versionInformedRacingCommon=1.0-SNAPSHOT
 versionJUnitJupiter=5.6.2
 versionLombok=1.18.12
