--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,14 @@
-bomSpringCloud=Hoxton.SR6
-bomAwsJavaSdk=1.11.822
-bomAwsXRaySdk=2.6.1
+bomSpringCloud=Hoxton.SR8
+bomAwsJavaSdk=1.11.853
+bomSpringFramework=5.2.8.RELEASE
+bomAwsXRaySdk=2.7.1
 versionAwsLambdaCore=1.2.1
-versionAwsLambdaEvents=3.1.0
+versionAwsLambdaEvents=3.2.0
 versionAwsLambdaLog4j=1.2.0
 versionInformedRacingCommon=1.0-SNAPSHOT
 versionJUnitJupiter=5.6.2
 versionLombok=1.18.12
-pluginSpringBoot=2.3.2.RELEASE
+versionMysqlConnector=8.0.21
+pluginSpringBoot=2.3.3.RELEASE
 pluginShadow=6.0.0
 thisReleaseVersion=1.0-SNAPSHOT
