--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,7 +19,7 @@ dependencies {
             "org.springframework.boot:spring-boot-starter-data-jpa",
             "org.springframework.boot:spring-boot-starter-log4j2",
             "org.projectlombok:lombok:${versionLombok}",
-            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310",
+            "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${versionJackson}",
             "com.amazonaws:aws-java-sdk-secretsmanager",
             "com.amazonaws:aws-java-sdk-rds",
             "com.amazonaws:aws-java-sdk-sqs",
