--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ versionAwsLambdaCore=1.2.1
 versionAwsLambdaEvents=3.2.0
 versionAwsLambdaLog4j=1.2.0
 versionInformedRacingCommon=1.0-SNAPSHOT
+versionJackson=2.11.2
 versionJUnitJupiter=5.6.2
 versionLombok=1.18.12
 versionMysqlConnector=8.0.21
