updated dep versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ bomAwsXRaySdk=2.7.1
 versionAwsLambdaCore=1.2.1
 versionAwsLambdaEvents=3.2.0
 versionAwsLambdaLog4j=1.2.0
-versionInformedRacingCommon=1.0-SNAPSHOT
+versionInformedRacingCommon=1.0.0
 versionJackson=2.11.2
 versionJUnitJupiter=5.6.2
 versionLombok=1.18.12
 versionMysqlConnector=8.0.21
 pluginSpringBoot=2.3.3.RELEASE
 pluginShadow=6.0.0
-thisReleaseVersion=1.0-SNAPSHOT
+thisReleaseVersion=1.0.0
